tests/ui/traits/non_lifetime_binders/bad-sized-cond.stderr
error[E0277]: the size for values of type `V` cannot be known at compilation time
  --> $DIR/bad-sized-cond.rs:16:5
   |
LL |     foo();
   |     ^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `V`
note: required by a bound in `foo`
  --> $DIR/bad-sized-cond.rs:5:15
   |
LL | pub fn foo()
   |        --- required by a bound in this function
LL | where
LL |     for<V> V: Sized,
   |               ^^^^^ required by this bound in `foo`

error[E0277]: `V` is not an iterator
  --> $DIR/bad-sized-cond.rs:19:5
   |
LL |     bar();
   |     ^^^^^ `V` is not an iterator
   |
   = help: the trait `Iterator` is not implemented for `V`
   = note: required for `V` to implement `IntoIterator`
note: required by a bound in `bar`
  --> $DIR/bad-sized-cond.rs:11:15
   |
LL | pub fn bar()
   |        --- required by a bound in this function
LL | where
LL |     for<V> V: IntoIterator,
   |               ^^^^^^^^^^^^ required by this bound in `bar`

error[E0277]: the size for values of type `V` cannot be known at compilation time
  --> $DIR/bad-sized-cond.rs:19:5
   |
LL |     bar();
   |     ^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `V`
   = note: required for `V` to implement `IntoIterator`
note: required by a bound in `bar`
  --> $DIR/bad-sized-cond.rs:11:15
   |
LL | pub fn bar()
   |        --- required by a bound in this function
LL | where
LL |     for<V> V: IntoIterator,
   |               ^^^^^^^^^^^^ required by this bound in `bar`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
